--- a/ooc-samples/ooc-samples.vcxproj.filters
+++ b/ooc-samples/ooc-samples.vcxproj.filters
@@ -1,19 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="occ">
+    <Filter Include="ooc">
       <UniqueIdentifier>{237b18b4-4cb3-430f-adf3-0f89606e52ab}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\cuda_context.h">
-      <Filter>occ</Filter>
+      <Filter>ooc</Filter>
     </ClInclude>
     <ClInclude Include="..\include\cuda_objects.h">
-      <Filter>occ</Filter>
+      <Filter>ooc</Filter>
     </ClInclude>
     <ClInclude Include="..\include\stopwatch.h">
-      <Filter>occ</Filter>
+      <Filter>ooc</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="add.cu" />
   </ItemGroup>
 </Project>
